# jimp2

lab1/factorial/: main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algo/: Algo.cpp  Algo.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h
lab11/: CMakeLists.txt
lab11/factorymethod/: CMakeLists.txt  Factorymethod.cpp  Factorymethod.h  main.cpp
lab11/logger/: Logger.cpp  Logger.h  main.cpp
lab11/meanmethod/: CMakeLists.txt  MeanMethod.cpp  MeanMethod.h  main.cpp
lab11/summethod/: CMakeLists.txt  SumMethod.cpp  SumMethod.h  main.cpp
lab12/: CMakeLists.txt
lab12/sequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/teacherhash/: TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: CMakeLists.txt  Node.cpp  Node.h  Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: TreeIterators.h
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/minimaltimedifference/: main.cpp  (+2 more)
lab4/: CMakeLists.txt
lab7/: CMakeLists.txt
lab7/figure/: CMakeLists.txt  Circle.cpp  Circle.h  Figure.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
lab8/: CMakeLists.txt
lab8/dvd/: CMakeLists.txt  DVD.cpp  DVD.h  main.cpp
lab8/dvd/Exceptions/: Exception.cpp  Exception.h  InvalidSequenceException.cpp  InvalidSequenceException.h  NoFileException.cpp  NoFileException.h
lab8/dvd/subtitles/: input.sub  output.sub
lab9/juwenalia/: Backpack.cpp  Backpack.h  CMakeLists.txt  Store.cpp  Store.h  Student.cpp  Student.h  main.cpp
lab9/juwenalia/products/: AlcoholProduct.cpp  AlcoholProduct.h  Beer.cpp  Beer.h  Product.cpp  Product.h  Vodka.cpp  Vodka.h  Water.h  Wine.cpp  Wine.h
(+43 files in other folders)
